# coma

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py  guide.rst  index.rst  reference.rst
docs/source/examples/: cli.rst  coma.rst  parser.rst  preload.rst  serialization.rst
docs/source/references/: index.rst
docs/source/references/config/: base.rst  cli.rst  index.rst  io.rst
docs/source/references/core/: index.rst
docs/source/references/hooks/: base.rst  config_hook.rst  index.rst  init_hook.rst  management.rst  parser_hook.rst  post_config_hook.rst  run_hook.rst
docs/source/tutorials/: command.rst  hooks.rst  intro.rst  wake.rst
docs/source/tutorials/core/: command.rst  forget.rst  index.rst  initiate.rst  register.rst  wake.rst
docs/source/tutorials/examples/: cli.rst  coma.rst  index.rst  json.rst  modify_coma.rst  moulding.rst  parser.rst  serialization.rst
docs/source/tutorials/hooks/: index.rst  intro.rst  protocols.rst
src/coma/: __init__.py
src/coma/config/: __init__.py  base.py  cli.py  io.py  utils.py
src/coma/core/: __init__.py  command.py  forget.py  initiate.py  internal.py  register.py  singleton.py  wake.py
src/coma/hooks/: __init__.py  base.py  config_hook.py  core.py  init_hook.py  management.py  parser_hook.py  post_config_hook.py  run_hook.py  utils.py
test/: test_command.py  test_complex_integration.py  test_config.py  test_hooks.py  test_override.py  test_param_data.py  test_wake.py  two.yaml
