[metadata]
name = coma
version = 0.0.2
author = Francois Roewer-Despres
author_email = coma.pypi@gmail.com
description = Command Management for humans
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/francois-rd/coma
project_urls =
    Bug Tracker = https://github.com/francois-rd/coma/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src