[metadata]
name = coma
version = 0.9.0
author = Francois Roewer-Despres
author_email = coma.pypi@gmail.com
description = Configurable command management for humans
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/francois-rd/coma
project_urls =
    Bug Tracker = https://github.com/francois-rd/coma/issues
    Documentation = https://coma.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    boltons
    omegaconf>=2.1
    dataclasses;python_version=='3.6'

[options.packages.find]
where = src
